--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "font-awesome": "^4.7.0",
+    "jquery-popup-overlay": "^1.7.4",
+    "jquery-validation": "^1.18.0",
     "slick-carousel": "^1.8.1",
     "svg4everybody": "^2.1.9",
     "svgxuse": "^1.2.6",
